auth users signup,login,getuser

--- a/.env-copy
+++ b/.env-copy
@@ -7,12 +7,12 @@ NODE_ENV=development
 #DB
 DB_USER_NAME=root
 DB_PASSWORD=
-DB_NAME=spunk_group_sso
+DB_NAME=eclecticdb
 DB_HOST=localhost
 DB_CLIENT=mysql2
 
 #Title
-TITLE=Spunk Group Foundation
+TITLE=Eclectic Arts
 
 ENCRYPT_STRING=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9
 
